[gd_scene load_steps=12 format=3 uid="uid://7inl4rvey7qc"]

[ext_resource type="Theme" uid="uid://vnjfeobf1xfo" path="res://core/resources/theme/theme_menus.tres" id="1_hj10e"]
[ext_resource type="Script" path="res://interface/interactors/menu_options.gd" id="2_ihiog"]
[ext_resource type="Theme" uid="uid://croyx1o13jqlf" path="res://core/resources/theme/button_menus_menus.tres" id="3_h7bsc"]
[ext_resource type="Script" path="res://interface/animators/anim_button.gd" id="4_laypp"]
[ext_resource type="Texture2D" uid="uid://dt6jjx51bd4md" path="res://assets/interface/ui-panel.png" id="5_idblw"]
[ext_resource type="Theme" uid="uid://otrfm5jo3rs" path="res://core/resources/theme/theme_panel_button.tres" id="6_tkm45"]
[ext_resource type="Script" path="res://interface/animators/anim_button_panel.gd" id="7_y5njn"]

[sub_resource type="FontVariation" id="FontVariation_gj8xb"]
spacing_top = -5
spacing_bottom = -5

[sub_resource type="LabelSettings" id="LabelSettings_1q4ik"]
font = SubResource("FontVariation_gj8xb")
font_size = 32
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.05)
shadow_offset = Vector2(4, 4)

[sub_resource type="FontVariation" id="FontVariation_bocch"]
spacing_top = -5
spacing_bottom = -5

[sub_resource type="LabelSettings" id="LabelSettings_ljwrw"]
font = SubResource("FontVariation_bocch")
font_size = 24
outline_size = 7
outline_color = Color(0.4, 0.4, 0.4, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.05)
shadow_offset = Vector2(4, 4)

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hj10e")
script = ExtResource("2_ihiog")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.1, 0.25, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2

[node name="MusicBtn" type="Button" parent="MarginContainer/VBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_h7bsc")
text = "Music: ON"
script = ExtResource("4_laypp")

[node name="SFXBtn" type="Button" parent="MarginContainer/VBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_h7bsc")
text = "SFX: ON"
script = ExtResource("4_laypp")

[node name="ProgessBtn" type="Button" parent="MarginContainer/VBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_h7bsc")
text = "Reset Progress"
script = ExtResource("4_laypp")

[node name="BackButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("3_h7bsc")
text = "Back to Board Select"
script = ExtResource("4_laypp")

[node name="ResetPopup" type="MarginContainer" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="NinePatchRect" type="NinePatchRect" parent="ResetPopup"]
self_modulate = Color(1, 1, 1, 0.9)
custom_minimum_size = Vector2(450, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("5_idblw")
region_rect = Rect2(0, 0, 144, 144)
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48

[node name="Content" type="MarginContainer" parent="ResetPopup/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="ResetPopup/NinePatchRect/Content"]
layout_mode = 2

[node name="Label" type="Label" parent="ResetPopup/NinePatchRect/Content/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Are you sure you want to Reset all your Progress?"
label_settings = SubResource("LabelSettings_1q4ik")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="ResetPopup/NinePatchRect/Content/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 10
text = "(You can't undo this)"
label_settings = SubResource("LabelSettings_ljwrw")
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ResetPopup/NinePatchRect/Content/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 40

[node name="YesProgressBtn" type="Button" parent="ResetPopup/NinePatchRect/Content/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_tkm45")
text = "Yes"
script = ExtResource("7_y5njn")

[node name="NoProgressBtn" type="Button" parent="ResetPopup/NinePatchRect/Content/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_tkm45")
text = "No
"
script = ExtResource("7_y5njn")
